# libsalac

./: .gitignore  Makefile.am  Makefile.in  README  configure  configure.ac  libsalac.pc.in
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
examples/: sample.alac
src/: libsalac.cc  libsalac.h  libsalac.h.gch  libsalac.la  libsalac.pc.in  libsalac.so.1  libsalac.so.1.0  libsalacconfig.h
src/lib/alac/codec/: makefile
src/lib/alac/codec/.svn/: all-wcprops  entries
src/salactest/: salactest  salactest.c
